--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
     "10up/wp_mock": "0.4.2",
     "dealerdirect/phpcodesniffer-composer-installer": "0.7.1",
     "mockery/mockery": "1.3.1",
-    "php-coveralls/php-coveralls": "2.2.0",
+    "php-coveralls/php-coveralls": "2.4.3",
     "phpcompatibility/phpcompatibility-wp": "2.1.0",
     "phpunit/phpunit": "8.5.2",
     "wp-coding-standards/wpcs": "2.3.0",
     "wpsh/local": "0.2.3"
   },
   "require": {
-    "php": ">=7.2",
+    "php": ">=7.3",
     "composer/installers": "^1.7"
   },
   "autoload": {
@@ -38,7 +38,7 @@
       "phpunit --do-not-cache-result"
     ],
     "coverage": [
-      "php-coveralls --verbose"
+      "php-coveralls --coverage_clover=tests/coverage/php/clover.xml --json_path=tests/coverage/php/coveralls-upload.json -v"
     ],
     "build": [
       "composer install --no-dev --prefer-dist --optimize-autoloader --no-scripts"
