--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -29,6 +29,7 @@
 	</filter>
 
 	<logging>
+		<log type="coverage-html" target="tests/coverage/php" />
 		<log type="coverage-clover" target="tests/coverage/php/clover.xml" />
 		<log type="coverage-text" target="php://stdout" />
 	</logging>
