--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
 
   lint:
-    name: Lint
+    name: Lint JS & PHP
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -38,8 +38,8 @@ jobs:
       - name: Detect coding standard violations
         run: npm run lint
 
-  unit-test:
-    name: Unit test
+  test:
+    name: Unit test JS & PHP
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -85,7 +85,8 @@ jobs:
         run: composer coverage
 
   finish:
-    needs: unit-test
+    name: Finish parallel tests
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Coveralls Finished
