Add a rule to enforce [] array syntax
Some candidates have been confused
about the type of array syntax the
project should use.

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -21,6 +21,8 @@
 	<rule ref="PHPCompatibilityWP" />
 	<config name="testVersion" value="7.2-" />
 
+	<rule ref="Generic.Arrays.DisallowLongArraySyntax.Found" />
+
 	<file>.</file>
 
 	<exclude-pattern>/node_modules/</exclude-pattern>
