Set the Node version to 14
Node lts is now 16,
so it won't get 14 anymore.
It looks like Node 14 is what Gutenberg uses:
https://github.com/WordPress/gutenberg/blob/43d950788629daaf588c80a2a56173124f112c60/.nvmrc#L1

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/xwp/site-counts.git"
   },
   "engines": {
-    "node": ">=10",
+    "node": "14",
     "npm": ">=6.9"
   },
   "scripts": {
