--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Get correct Node version
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version-file: '.nvmrc'
 
       - name: Get npm cache directory
         id: npm-cache
@@ -53,7 +53,7 @@ jobs:
       - name: Get correct Node version
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version-file: '.nvmrc'
 
       - name: Get npm cache directory
         id: npm-cache
