--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   "prefer-stable": true,
   "require-dev": {
     "10up/wp_mock": "0.4.2",
+    "automattic/vipwpcs": "^2.3",
     "dealerdirect/phpcodesniffer-composer-installer": "0.7.1",
     "mockery/mockery": "1.3.1",
     "php-coveralls/php-coveralls": "2.4.3",
@@ -18,6 +19,12 @@
   "require": {
     "php": ">=7.3",
     "composer/installers": "^1.7"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "composer/installers": true
+    }
   },
   "autoload": {
     "psr-4": {
