--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:php:coverage": "composer test"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.0.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@wordpress/block-editor": "^8.0.13",
     "@wordpress/blocks": "^11.1.5",
     "@wordpress/eslint-plugin": "^9.3.0",
@@ -42,7 +42,7 @@
     "@wordpress/scripts": "^19.2.3",
     "@wordpress/server-side-render": "^3.0.17",
     "npm-run-all": "4.1.5",
-    "prettier": "2.3.2"
+    "prettier": "2.5.1"
   },
   "dependencies": {}
 }
