--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "@wordpress/i18n": "^4.2.4",
     "@wordpress/scripts": "^19.2.3",
     "@wordpress/server-side-render": "^3.0.17",
+    "acorn": "^8.7.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "typescript": "^4.5.4"
   },
   "dependencies": {}
 }
