--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@wordpress/scripts": "^19.2.3",
     "acorn": "^8.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.5.1",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
